--- a/PcProsShop/Properties/Resources.resx
+++ b/PcProsShop/Properties/Resources.resx
@@ -202,4 +202,7 @@
   <data name="AccountIconEmpty" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\AccountIconEmpty1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SoftwareIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SoftwareIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
